# SLMDash

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: test.yml
app/: __init__.py  routes.py
app/dashboard/: layout.py  main.py
app/dashboards/: graphs.py  image_recognition.py  layout.py  main.py  report_generator.py  utils.py
app/dashboards/data_visualization/: anomaly_detection.py  constants.py  graphs.py  layout.py  main.py  report.py  utils.py
app/dashboards/visualization/: constants.py  main.py  utils.py
app/dataviz/: dashboard.py  data.py  graphs.py  layout.py  utils.py
app/templates/: base.jinja2  data_report.jinja2  image_recognition_page.jinja2  index.jinja2  index_page.jinja2  layout.jinja2  ml_report.jinja2  personal_reports.jinja2  reference.jinja2  report.jinja2  report_template.jinja2  reports.jinja2  research_page.jinja2  wip.jinja2  wip_page.jinja2
dashboard-app/: __init__.py  routes.py
dashboard-app/templates/: index.jinja2  layout.jinja2
dashboard_app/: __init__.py  routes.py
dashboard_app/plotlydash/: dashboard.py  data.py  layout.py
flaskproject/plotlydash/: dashboard.py  data.py  layout.py
tests/: conftest.py  test_app.py
