[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["callistachang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
dash = "^1.13.4"
pandas = "^1.0.5"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
