[tool.poetry]
name = "dashboard_app"
version = "0.1.0"
description = ""
authors = ["callistachang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
flask = "^1.1.2"
dash = "^1.13.4"
pandas = "^1.0.5"
python-dotenv = "^0.14.0"
flask_assets = "^2.0"
pyarrow = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
